Loop Select clearing keymap options breaks operator behaviour #90275

Closed
opened 2021-07-28 20:22:31 +02:00 by Oleg · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.93.2 Release Candidate, branch: master, commit date: 2021-07-27 12:05, hash: 45ed762124
Worked: (newest version of Blender that worked as expected)

Short description of error
Loop Select disabling keymap options breaks operator behavior (and maybe others too?)

Exact steps for others to reproduce the error

  • Open .blend file
  • Open Preferences -> Keymap
  • Search for Loop Select and expand first Mesh Loop item
  • Press cross on Toggle Select so it turns gray
  • Select loop with {key Alt LMB} (won't work as expected)
  • {key Alt Shift LMB} and again with {key Alt LMB} starts to behave as expected.
    (Try to save this Keymap and open .blend file to select loop with {key Alt LMB} , notice it's broken again)

LoopSelectBroken.mp4

Test File:
#90275.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.93.2 Release Candidate, branch: master, commit date: 2021-07-27 12:05, hash: `45ed762124` Worked: (newest version of Blender that worked as expected) **Short description of error** Loop Select disabling keymap options breaks operator behavior (and maybe others too?) **Exact steps for others to reproduce the error** - Open .blend file - Open `Preferences -> Keymap` - Search for Loop Select and expand first Mesh Loop item - Press cross on Toggle Select so it turns gray - Select loop with {key Alt LMB} (won't work as expected) - {key Alt Shift LMB} and again with {key Alt LMB} starts to behave as expected. (Try to save this Keymap and open .blend file to select loop with {key Alt LMB} , notice it's broken again) [LoopSelectBroken.mp4](https://archive.blender.org/developer/F10243445/LoopSelectBroken.mp4) Test File: [#90275.blend](https://archive.blender.org/developer/F10244333/T90275.blend)
Author

Added subscriber: @DotBow

Added subscriber: @DotBow
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author

It actually seems that many of the operators breaks if properties are cleared.

It actually seems that many of the operators breaks if properties are cleared.
Oleg changed title from Loop Select disabling keymap options breaks operator behaviour to Loop Select clearing keymap options breaks operator behaviour 2021-07-29 11:14:20 +02:00

This issue was referenced by 7724251af8

This issue was referenced by 7724251af81f7222fa552815525ed256fbbb2e95

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-08-03 15:36:52 +02:00

note that this wasn't technically a bug, but it wasn't useful behavior either - these settings and no longer used between executions.

note that this wasn't technically a bug, but it wasn't useful behavior either - these settings and no longer used between executions.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90275
No description provided.